--- a/parts/ipstreamer.tex
+++ b/parts/ipstreamer.tex
@@ -65,8 +65,6 @@
 %%\titleformat{\subsection}[runin]{\mdseries\bf}{\thesubsection}{1em}{}
 %%\titleformat{\subsubsection}[runin]{\mdseries\bf\underline\large}{\thesubsection}{1 em}{\vspace{-5 pt}}
 %
-%\usepackage{footbib}
-%
 %% (This matches ConTeXt defaults)
 %
 %%%% ToC (table of contents) APPEARANCE
@@ -91,7 +89,7 @@ Smartphones are the ideal surveillance device, since they are portable, lightwei
 
 \section{PhoneStreamer}
 
-Phonestreamer was the name of an app I made for Maemo in 2010\footnote{PhoneStreamer - http://talk.maemo.org/showthread.php?t=70877}. It was essentially a front-end for a few gstreamer-scripts, with a wide variety of features namely:
+Phonestreamer was the name of an app I made for Maemo in 2010\footnote{PhoneStreamer - http://talk.maemo.org/showthread.php?t=70877}\label{ref:phonstreamer}. It was essentially a front-end for a few gstreamer-scripts, with a wide variety of features namely:
 \begin{enumerate}
 \item Streams
 	\begin{enumerate}
@@ -171,8 +169,8 @@ echo $all               #print list
 The shell code I wrote above works, and will find all the active connections on a network -- eventually. It is very methodical, and will ping all connections from (for example) 192.168.254.1 to 192.168.254.100, assuming there are even 100 assigned addresses on the network. However the user will die of boredom before a list can be populated and so I had to search for another way.\\
 
 {\bf Arp-Scan}\\
-Arp-Scan is a tool that "sends ARP packets to hosts on the local network and displays any responses that are received" \footnote{Arp-Scan man page - http://linux.die.net/man/1/arp-scan}. It is scores faster than pinging methodically, and usually returns a list within 5 seconds of being called (depending on how large the network is. For WAN's this may take up to 10 minutes).
-A Maemo port of arp-scan exists \footnote{Arp-Scan for Maemo, Colin Stephane - http://talk.maemo.org/showthread.php?t=73467} and so I could simply add it to my project as a dependency and harness it from the shell.
+Arp-Scan is a tool that "sends ARP packets to hosts on the local network and displays any responses that are received" \footnote{Arp-Scan man page - http://linux.die.net/man/1/arp-scan}\label{ref:arpscanman}. It is scores faster than pinging methodically, and usually returns a list within 5 seconds of being called (depending on how large the network is. For WAN's this may take up to 10 minutes).
+A Maemo port of arp-scan exists \footnote{Arp-Scan for Maemo, Colin Stephane - http://talk.maemo.org/showthread.php?t=73467}\label{ref:arpscanmaemo} and so I could simply add it to my project as a dependency and harness it from the shell.
 
 Due to reasonable delay between scanning the network and displaying the results, I created a small Thread class for it so that the UI would remain active while it scanned, and also so that a loading spinner would spin so as to ensure the user that something was happening in the background:
 \vspace{-15pt}
@@ -198,13 +196,13 @@ QString MyThread::getNetworkInfo()
     QObject::connect(scanthread, SIGNAL(finished()), this, SLOT(populateList()))
 \end{lstlisting}
 
-After the list is populated, the user then selects the address from a dropdown menu and then the window closes, updating the address textbox appropriately, ensuring that the user will never have to manually type in an address if they dont want to.
+After the list is populated, the user then selects the address from a dropdown menu and then the window closes, updating the address textbox appropriately, ensuring that the user will never have to manually type in an address if they dont want to. Screenshots of this in action is shown on page~\pageref{guimap}
 
 
 \subsubsection{MySQL}
 Previously versions of PhoneStreamer would remember the last set settings and then simply reload them when the app started up upon next use (see page~\pageref{QSettings} for a detailed summary of how to persist data in Qt). This was useful when the user wanted to connect to the same machine twice, using the same settings without having to retype the address,port, video type and other parameters all over again. However it was limited to having a single-level history, so that if a user connected to machine A and then connected to machine B, only machine B would be remembered and machine A would be overwritten, meaning that the user would have to retype everything for machine A (which in turn would overwrite the details for machine B).
 
-A user on the official announcement page of the application requested a feature where the application would store different profiles for work and home\footnote{Angry Yoda Master (AMY) - http://talk.maemo.org/showthread.php?p=1054381\&highlight=profiles\#post1054381}.
+A user on the official announcement page of the application requested a feature where the application would store different profiles for work and home\footnote{Angry Yoda Master (AMY) - http://talk.maemo.org/showthread.php?p=1054381\&highlight=profiles\#post1054381}\label{ref:amy}.
 To overcome this I decided to implement a MySQL database, so that the user could switch between different configurations easily. I have used MySQL before: once for Android application, and many times for web development so I was well familiar with the declarative syntax and porting over between projects was relatively simple.
 
 In order to enable SQL functionality, a 'QT +=sql' must be added to .pro file of the application in order for qmake to compile correctly.
@@ -265,7 +263,7 @@ function onDataLoad(evt:Event)\{
 	textLoader.addEventListener(Event.COMPLETE, textLoadComplete);
 \}
 \end{lstlisting}
-This object would grab the IP address of any user visiting any page that my signature appeared on and insert into a database along with the global coordinates of the IPaddress which was found by querying http://whatismyipaddress.com/ip/[insert\_ip\_address]:
+This object would grab the IP address of any user visiting any page that my signature appeared on and insert into a database along with the global coordinates of the IPaddress which was found by querying 'http://whatismyipaddress.com/ip/[insert\_ip\_address]:'
 
 \begin{lstlisting}[title=\bf Snippet from insert.php]
 //////Part 2 - Insert new IPAddress and User
@@ -294,15 +292,37 @@ if(strlen(\$country)>2)\{
 \}
 \end{lstlisting}
 
-Resulting in a page that looked like this:
-%WEBPAGE IMAGE OF MAPS AND TABLE
+The webpage displaying this prototype has since been taken down (much to my anger) and I was unable to take a screenshot, but the code is given in the appendix and if tested on a server will work.
 
 However, the accuracy of coordinates was not very good (often a 20 mile radius around an IP address was necessary) and people connecting from central London all seemed to connect from one central hub, which overlapped markers and made it hard to pick out different connections.
 
 With much reluctance, I had to drop this web-side component too.
 
 \subsection{Afterthoughts}
-In the very near future I hope to merge Phonestreamer with the rest of the watchdog application to make a fully-fledged image-processing application. With this in mind, my new version of Phonestreamer was called MediaStream and had buttons included in the main UI as empty slots for calling the two components of watchdog (the motion detector, and the time lapser).
-%\end{document}
+In the very near future I hope to merge Phonestreamer with the rest of the Watchdog application to make a fully-fledged image-processing application. With this in mind, my new version of Phonestreamer was called MediaStream and had buttons included in the main UI as empty slots for calling the two components of watchdog (the motion detector, and the time lapser).
+
+\begin{thebibliography}{9}
+
+\bibitem{phonestreamer}
+Mehmet Tekman (tetris11\_), Phonestreamer Announce Page, Maemo Forums
+\url{http://talk.maemo.org/showthread.php?t=70877}
+Page~\pageref{ref:phonstreamer}
+
+\bibitem{arpscanman}
+Roy Hills, Arp-Scan Author, \url{http://linux.die.net/man/1/arp-scan}
+Page~\pageref{ref:arpscanman}
+
+\bibitem{arpscanmaemo}
+Colin Stephane, Arp-Scan for Maemo Announce Page, Maemo Forums
+\url{http://talk.maemo.org/showthread.php?t=73467}
+Page~\pageref{ref:arpscanmaemo}
+
+\bibitem{amy}
+Angry Yoda Master(AMY), Feature request on Phonstreamer Announce thread, Maemo Forums,
+\url{http://talk.maemo.org/showthread.php?p=1054381\&highlight=profiles\#post1054381}
+Page~\pageref{ref:amy}
+
+\end{thebibliography}
+
 %
-%QSettings in GUI section
+%\end{document}
