--- a/parts/appendix.tex
+++ b/parts/appendix.tex
@@ -2,18 +2,24 @@
 \section{Further Background}
 
 \subsubsection{Community}\label{maemocomm}
-\paragraph{Maemo initially started off as being maintained by Nokia, with users recieving flashable firmware updates every 6 months or so, and over-the-air package updates bimonthly until it was stopped being maintained in 2011. At that point the community was responsible for updates and now the latest edition of Fremantle is known as Maemo CSSU (Community Supported Service Updates) which have transformed the device into a very fast and almost completely open-source device.}
-\paragraph{Further developements to the Kernel were made, and soon Kernel-Power (now version 51)  is most widely used kernel on the device replacing Nokia's PR 1.3 due to it's overclocking support, USB hostmode capabilites, wifi packet-injection, and even support for 720p video (not a feature of the device, nor any device, at the time of its release in 2009)}
-\paragraph{Applications follow the same open-source framework as Debian applications, where any packages in the main repositories must be open source, and any third party closed-source applications must be installed through Nokia's Ovi store which has slow access through the phone's browser}
+Maemo initially started off as being maintained by Nokia, with users recieving flashable firmware updates every 6 months or so, and over-the-air package updates bimonthly until it was stopped being maintained in 2011. At that point the community was responsible for updates and now the latest edition of Fremantle is known as Maemo CSSU (Community Supported Service Updates) which have transformed the device into a very fast and almost completely open-source device.
+
+Further developements to the Kernel were made, and soon Kernel-Power (now version 51)  is most widely used kernel on the device replacing Nokia's PR 1.3 due to it's overclocking support, USB hostmode capabilites, wifi packet-injection, and even support for 720p video (not a feature of the device, nor any device, at the time of its release in 2009).
+
+Applications follow the same open-source framework as Debian applications, where any packages in the main repositories must be open source, and any third party closed-source applications must be installed through Nokia's Ovi store which has slow access through the phone's browser.
+
 
 \subsubsection{Future of Nokia}
-\paragraph{Nokia's previous OS was Symbian, which at the time was one of the most popular mobile operating system. Every one in two mobile phones sold in 2009 carried the Symbian OS\cite{symb1} a stark contrast to the current leading smartphone OS's of today. Maemo was Nokia's next brain child, the open-source succesor to Symbian which it replaced in the release of  it's then next-gen internet tablet phones, a bold and somewhat puzzling move by Nokia after the success of their initial Symbian OS. Maemo's open framework attracted many hardcore linux developers hungry to port linux applications onto the device, but sadly that was mostly all the phone was good for. The initial Diablo release for the Nokia N810 was superseded by  the Fremantle release for the N900, which has now been surpassed by the Harmattan release for the N9 and N950.}
-\paragraph{Harmattan was supposed to be the stepping stone between Maemo and Meego, Nokia's next inventure, which was a merge between Moblin OS and Maemo. However though initial development images worked well with Nokia devices the Meego project was dropped by Nokia and the community had to once again pick up the slack, and are currently maintining Meego under the codename 'Mer' which is now being used as the template for the next completely open-source mobile OS 'Tizen' which will be launched on Samsung phones in the near future}
-\paragraph{One cannot blame Nokia for trying something new, but it is often said that the reason that sales for Nokia internet tablets did not do so well was because the CEO's were not comfortable fully backing the mostly unknown Maemo and Meego OSes. Had there been more advertizing and promotional support from Nokia's PR department, the mobile phone market may have been very different from the current state that is in now.}
-\paragraph{At the moment Nokia have backed behind the Windows Mobile 8 OS in a last bid attempt to re-establish themselves in the market to new customers with the Nokia Lumia smartphone series. This is essentially a complete reversal of the open-source ideals it had been pursuing not so many months before, leaving a lot of the original Nokia developers feeling somewhat betrayed.}
+Nokia's previous OS was Symbian, which at the time was one of the most popular mobile operating system. Every one in two mobile phones sold in 2009 carried the Symbian OS\footnote{Blookmber Business - http://www.businessweek.com/globalbiz/content/nov2009/gb2009114\_367401.htm} a stark contrast to the current leading smartphone OS's of today. Maemo was Nokia's next brain child, the open-source succesor to Symbian which it replaced in the release of  it's then next-gen internet tablet phones, a bold and somewhat puzzling move by Nokia after the success of their initial Symbian OS. Maemo's open framework attracted many hardcore linux developers hungry to port linux applications onto the device, but sadly that was mostly all the phone was good for. The initial Diablo release for the Nokia N810 was superseded by  the Fremantle release for the N900, which has now been surpassed by the Harmattan release for the N9 and N950.
+
+Harmattan was supposed to be the stepping stone between Maemo and Meego, Nokia's next inventure, which was a merge between Moblin OS and Maemo. However though initial development images worked well with Nokia devices the Meego project was dropped by Nokia and the community had to once again pick up the slack, and are currently maintining Meego under the codename 'Mer' which is now being used as the template for the next completely open-source mobile OS 'Tizen' which will be launched on Samsung phones in the near future.
+
+One cannot blame Nokia for trying something new, but it is often said that the reason that sales for Nokia internet tablets did not do so well was because the CEO's were not comfortable fully backing the mostly unknown Maemo and Meego OSes. Had there been more advertizing and promotional support from Nokia's PR department, the mobile phone market may have been very different from the current state that is in now.
+
+At the moment Nokia have backed behind the Windows Mobile 8 OS in a last bid attempt to re-establish themselves in the market to new customers with the Nokia Lumia smartphone series. This is essentially a complete reversal of the open-source ideals it had been pursuing not so many months before, leaving a lot of the original Nokia developers feeling somewhat betrayed.
+
 
 \section{Other Implementations}
-
 \subsection{qDebug vs std::cout}\label{qdebug}
 qDebug is the default output stream in Qt. It has very basic usage almost similar to cout, but it automatically flushes and appends a linebreak to any output that is echoed to it.
 
@@ -33,35 +39,35 @@ Another useful feature of printing directly to the console is that I can use the
 \subsubsection{Message Handlers}
 Before I used cout, I attempted to use a qMessageHandler() that would automatically pipe qDebug() streams directly to std::cout. On the QtGlobal API\footnote{qInstallMessageHandler - http://doc.qt.nokia.com/4.7-snapshot/qtglobal.html\#qInstallMsgHandler}, I found the following snippet of code:
 \begin{lstlisting}
- \#include <qapplication.h>
- \#include <stdio.h>
- \#include <stdlib.h>
+ #include <qapplication.h>
+ #include <stdio.h>
+ #include <stdlib.h>
 
  void myMessageOutput(QtMsgType type, const char *msg)
- \{
-     switch (type) \{
+ {
+     switch (type) {
      case QtDebugMsg:
-         fprintf(stderr, "Debug: \%s\n", msg);
+         fprintf(stderr, "Debug: %s\n", msg);
          break;
      case QtWarningMsg:
-         fprintf(stderr, "Warning: \%s\n", msg);
+         fprintf(stderr, "Warning: %s\n", msg);
          break;
      case QtCriticalMsg:
-         fprintf(stderr, "Critical: \%s\n", msg);
+         fprintf(stderr, "Critical: %s\n", msg);
          break;
      case QtFatalMsg:
-         fprintf(stderr, "Fatal: \%s\n", msg);
+         fprintf(stderr, "Fatal: %s\n", msg);
          abort();
-     \}
-\ }
+     }
+}
 
- int main(int argc, char **argv)
- \{
+int main(int argc, char **argv)
+{
      qInstallMsgHandler(myMessageOutput);
      QApplication app(argc, argv);
      ...
      return app.exec();
- \}
+ }
 \end{lstlisting}
 The code identified the type of output message (Debug, Warning, Critical, Fatal) and piped it into the cout stream. Unforunately this was too much overhead, since there was a significant delay, and adding to the current overhead of using qDebug() in the first place was  too much. I simply abondoned the approach and replaced qDebug() with std::cout.
 
@@ -173,9 +179,12 @@ If no target has been set up, then go to Tools... Options... select the Linux De
 
 \section{API example usage}
 \subsection{GStreamer Pipelining in C++}
-\paragraph{ The following is just a small snippet from an example Camera class from the Maemo Documentation Wiki:\\http://wiki.maemo.org/Documentation/Maemo\_5\_Developer\_Guide/Using\_Multimedia\_Components/Camera\_API\_Usage
-\\ test\\\\}
+ The following is just a small snippet from an example Camera class from the Maemo Documentation Wiki\footnote{Camera Example - http://wiki.maemo.org/Documentation/Maemo\_5\_Developer\_Guide/Using\_Multimedia\_Components/Camera\_API\_Usage}
+
+\begin{frame}{}
+\vspace{-20pt}
 \lstinputlisting[title=\textbf{Source Code: gst\_class.cpp}]{Code/API_Examples/gst_class.cpp}
+\end{frame}
 
 \section{Tables}
 \import{tables/}{normalised_subtracted_image_size.tex}
