Noww just need to append all the appropriate code and check that it's all linked

--- a/parts/motiondetect.tex
+++ b/parts/motiondetect.tex
@@ -365,8 +365,8 @@ However this threshold was purely for 320x240 images. At that stage I had not co
 
 For this experiment I repeated the same experiment for the five different image sizes, but have only included the average counts per image size. See \ref{tab:normalised-images} in the Appendix for the complete table.\\
 
-%\import{tables/}{normalised_subtracted_image_size_SHORT.tex}
-\import{../tables/}{normalised_subtracted_image_size_SHORT.tex}
+\import{tables/}{normalised_subtracted_image_size_SHORT.tex}
+%\import{../tables/}{normalised_subtracted_image_size_SHORT.tex}
 
 The chart below in ~\cref{chart:thresholds} is based upon the data in the short table. It takes the maximum averages for each image size and plots them against the image size, with error bars as standard deviation.\\
 
