--- a/tables/normalised_subtracted_image_size.tex
+++ b/tables/normalised_subtracted_image_size.tex
@@ -1,12 +1,12 @@
 %\documentclass[8pt]{article} 
 %\begin{document}
 \begin{table}[H]
-\vspace{-100pt}
+\vspace{-20pt}
 \begin{tabular}{| c | c | l | l | l | l | c | }
 \hline
 \multicolumn{7}{|l|}{\bf Non-Zero Counts from Normalized Subtracted Images} \\
 \hline
- \hline
+\hline
 \multicolumn{7}{|c|}{320x240}\\
 \hline
 Test	&Scene 1	&Scene 2	&Scene 3	&Scene 4	&Scene 5	&STDEV\\\hline
@@ -54,7 +54,17 @@ Test	&Scene 1	&Scene 2	&Scene 3	&Scene 4	&Scene 5	&STDEV\\\hline
 10	&34278	&36288	&33474	&46195	&48286	&6994.8\\\hline
 Average	&42122.1	&36453.9	&38656.9	&43281.6	&42231.3	&2877.6\\
 \hline
- \hline 
+\end{tabular}
+\end{table}
+
+\pagebreak
+
+\begin{table}
+\begin{tabular}{| c | c | l | l | l | l | c | }
+\hline
+\multicolumn{7}{|l|}{\bf Non-Zero Counts from Normalized Subtracted Images} \\
+\hline
+\hline
 \multicolumn{7}{|c|}{1280x960}\\
 \hline
 Test	&Scene 1	&Scene 2	&Scene 3	&Scene 4	&Scene 5	&STDEV\\\hline
@@ -86,6 +96,7 @@ Test	&Scene 1	&Scene 2	&Scene 3	&Scene 4	&Scene 5	&STDEV\\\hline
 10	&71257	&66062	&79217	&63713	&78011	&6930.0\\
 Average	&62439.9	&70207.9	&74170.6	&65812.2	&71354.6	&4656.4\\\hline
 \end{tabular}
+\caption{}
 \label{tab:normalised-images}
 \end{table}
 %\end{document}
