--- a/write_up.tex
+++ b/write_up.tex
@@ -67,8 +67,6 @@
 %\titleformat{\subsection}[runin]{\mdseries\bf}{\thesubsection}{1em}{}
 %\titleformat{\subsubsection}[runin]{\mdseries\bf\underline\large}{\thesubsection}{1 em}{\vspace{-5 pt}}
 
-\usepackage{footbib}
-
 % (This matches ConTeXt defaults)
 
 %%% ToC (table of contents) APPEARANCE
@@ -116,7 +114,7 @@ I would like to thank the following people:
 		\item [‘deed’] For being the first user on the Maemo forum to test my application upon release, and the glowing review he gave it.
 		\end{description}		
 	\end{description}
-\let\thefootnote\relax\footnote{\underline{Note:} This write up contains colors that are best viewed from the PDF file on the CD}
+\footnote{\underline{Note:} This write up contains colors that are best viewed from the PDF file on the CD}
 \pagebreak
 
 \import{parts/}{background.tex}
@@ -125,8 +123,6 @@ I would like to thank the following people:
 \import{parts/}{ipstreamer.tex}
 \import{parts/}{userinterfaces.tex}
 \import{parts/}{release.tex}
-
-\part{Bibliography}
 
 \import{parts/}{appendix.tex}
 
