--- a/write_up.tex
+++ b/write_up.tex
@@ -99,14 +99,16 @@ Morphological image processing techniques were adopted upon frames captured by t
 \tableofcontents
 \begin{center}
 \vspace*{\fill}
+\footnote{\underline{Note:} This write up contains colors that are best viewed from the PDF file on the CD}
 {\bf Acknowledgements}\\
 \end{center}
 I would like to thank the following people:
 	\begin{description}
 	\item At UCL:
 		\begin{description}
-		\item [Robin Hirsch] For being stunningly flexible with my project idea, and for being incredibly helpful in finding me a secondary supervisor.
-		\item [Fabrizio Pece] For the great discussions and the very detailed guidance into all aspects of the project, notably the motion detection parts.
+		\item [Robin Hirsch] For being very flexible with my project idea, and for being incredibly helpful in finding me a secondary supervisor.
+		\item [Fabrizio Pece] For the truly superb and insightfully helpful discussions and guidance into all aspects of the project.
+
 		\end{description}
 	\item At Home:
 		\begin{description}
@@ -114,7 +116,7 @@ I would like to thank the following people:
 		\item [‘deed’] For being the first user on the Maemo forum to test my application upon release, and the glowing review he gave it.
 		\end{description}		
 	\end{description}
-\footnote{\underline{Note:} This write up contains colors that are best viewed from the PDF file on the CD}
+
 \pagebreak
 
 \import{parts/}{background.tex}
